# nornweave

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-compose.yaml  pyproject.toml
docs/: FEATURE-ROADMAP.md  TECH-STACK.md
docs/design/: DOMAIN-MODEL.md  EVENT-BUS.md  FUSION-PIPELINE.md  MEMORY-AGENT.md  ROUTER-AGENT.md  SERVICE-CONTRACTS.md
libs/nornweave-core/: pyproject.toml
libs/nornweave-core/src/nornweave_core/: __init__.py
libs/nornweave-core/src/nornweave_core/models/: __init__.py  entities.py  enums.py  events.py  identifiers.py  requests.py  responses.py  values.py
libs/nornweave-storage/: alembic.ini  pyproject.toml
libs/nornweave-storage/src/nornweave_storage/: __init__.py  config.py  exceptions.py  mappers.py  pool.py
libs/nornweave-storage/src/nornweave_storage/migrations/: env.py  script.py.mako
libs/nornweave-storage/src/nornweave_storage/migrations/versions/: 001_initial_schema.py
libs/nornweave-storage/src/nornweave_storage/repositories/: __init__.py  chunk.py  document.py
libs/nornweave-testing/: pyproject.toml
libs/nornweave-testing/src/nornweave_testing/: __init__.py
scripts/: create-topics.sh
services/fusion/: pyproject.toml
services/fusion/src/nornweave_fusion/: __init__.py
services/memory-agent/: pyproject.toml
services/memory-agent/src/nornweave_memory/: __init__.py
services/registry/: pyproject.toml
services/registry/src/nornweave_registry/: __init__.py
services/router/: pyproject.toml
services/router/src/nornweave_router/: __init__.py
tests/: conftest.py
tests/integration/: conftest.py  test_chunk_repository.py  test_document_repository.py  test_e2e_workflow.py  test_vector_search.py
tests/unit/: conftest.py  test_packages.py
tests/unit/test_core_models/: conftest.py  test_entities.py  test_enums.py  test_events.py  test_identifiers.py  test_json_schema.py  test_requests.py  test_responses.py  test_values.py
tests/unit/test_storage/: test_config.py  test_mappers.py
