[project]
name = "nornweave-core"
version = "0.0.1"
description = "NornWeave core domain models, interfaces, and protocols"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
dependencies = [
    "pydantic>=2.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nornweave_core"]
