[project]
name = "nornweave-storage"
version = "0.0.1"
description = "NornWeave storage backend abstractions"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
dependencies = [
    "nornweave-core",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    "alembic>=1.14",
    "sqlalchemy>=2.0",
    "numpy>=2.2",
    "pydantic-settings>=2.7",
]

[tool.uv.sources]
nornweave-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nornweave_storage"]
