[project]
name = "nornweave-testing"
version = "0.0.1"
description = "NornWeave shared test fixtures and helpers"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
dependencies = [
    "nornweave-core",
    "pytest>=8.3",
]

[tool.uv.sources]
nornweave-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nornweave_testing"]
