[project]
name = "nornweave-fusion"
version = "0.0.1"
description = "NornWeave Fusion Service — multi-agent response reconciliation"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
dependencies = [
    "nornweave-core",
]

[tool.uv.sources]
nornweave-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nornweave_fusion"]
