[project]
name = "nornweave-memory-agent"
version = "0.0.1"
description = "NornWeave Memory Agent — domain-specialized ingestion and recall"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
dependencies = [
    "nornweave-core",
]

[tool.uv.sources]
nornweave-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nornweave_memory"]
